--- a/our-courses/arka-kids.html
+++ b/our-courses/arka-kids.html
@@ -242,15 +242,18 @@
                                             Kids</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/phonics-star.html">Phonics
                                             Star</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/brite-english.html">Brite
                                             English</a></li>
                                     <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My
+                                            Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -351,36 +354,42 @@
     </header>
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
-        <section id="banner" class="container-fluid pt-0 pt-md-0">
-            <div class="row">
-                <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="https://www.playabacusindia.com/images/banner/5.webp" class="d-block w-100"
-                                    alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Discover the Best Preschool Near You</h1>
-                                        <p>Join Arka Kids, a trusted preschool near me
-                                            for joyful learning, pre KG programs, and pre
-                                            primary education.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a
-                                                        href="https://www.playabacusindia.com/">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">Arka Kids
-                                                </li>
-                                            </ol>
-                                        </nav>
-
-                                    </div>
-                                </div>
-                            </div>
+        <!-- banner -->
+        <section class="position-relative py-5 overflow-hidden hero-section">
+            <div class="container position-relative z-1">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6">
+                        <nav aria-label="breadcrumb" class="mb-4">
+                            <ol class="breadcrumb bg-transparent p-0 mb-0">
+                                <li class="breadcrumb-item"><a href="../index.html"
+                                        class="text-decoration-none text-muted">Home</a></li>
+                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">Arka Kids
+                                </li>
+                            </ol>
+                        </nav>
+                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
+                            Discover the Best <span class="text-gradient">Preschool</span> Near You
+                        </h1>
+                        <p class="lead text-secondary mb-5 hero-text">
+                            Join Arka Kids, a trusted preschool for joyful learning, pre-KG programs, and pre-primary
+                            education.
+                            We blend play with discovery to create an inspiring environment for young learners.
+                        </p>
+                        <div class="d-flex gap-3">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                class="theme-btn-2 text-decoration-none">
+                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                            </a>
                         </div>
                     </div>
+                    <div class="col-lg-6 position-relative d-none d-lg-block">
+                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
+                            <img src="https://www.playabacusindia.com/images/banner/5.webp"
+                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="Arka Kids Preschool">
+                            <!-- Floating Elements -->
 
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -491,26 +500,32 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">OUR OFFERINGS</h4>
-                            <li>Two children groups.</li>
-                            <li>Pre-Nursery - 1 to 2 years.</li>
-                            <li>Nursery - 2 to 3 years.</li>
-                            <li>Committed and experienced teachers and staff who maintain a cheerful environment in the
-                                school.</li>
-                            <li>A teacher-child ratio of 1:10.</li>
-                            <li>Incorporating regular updates and improvements in the well-researched curriculum.</li>
-                            <li>Varied range of activities to chisel the overall development of the child.</li>
-                            <li>A secure and hygienic environment.</li>
-                            <li>A prompt approach to all the parents queries and concerns.</li>
-                            <li>A happy extension of the home for the little one.</li>
-                            <p class="mt-4">At ARKA KIDS, we prepare a child to be independent in
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">OUR OFFERINGS</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-users"></i> Two children groups.</li>
+                                <li><i class="fa-solid fa-baby"></i> Pre-Nursery - 1 to 2 years.</li>
+                                <li><i class="fa-solid fa-child"></i> Nursery - 2 to 3 years.</li>
+                                <li><i class="fa-solid fa-chalkboard-user"></i> Committed and experienced teachers and
+                                    staff who maintain a cheerful environment.</li>
+                                <li><i class="fa-solid fa-scale-balanced"></i> A teacher-child ratio of 1:10.</li>
+                                <li><i class="fa-solid fa-book-open"></i> Incorporating regular updates and improvements
+                                    in the well-researched curriculum.</li>
+                                <li><i class="fa-solid fa-puzzle-piece"></i> Varied range of activities to chisel the
+                                    overall development of the child.</li>
+                                <li><i class="fa-solid fa-shield-halved"></i> A secure and hygienic environment.</li>
+                                <li><i class="fa-solid fa-comments"></i> A prompt approach to all the parents' queries
+                                    and concerns.</li>
+                                <li><i class="fa-solid fa-house-chimney"></i> A happy extension of the home for the
+                                    little one.</li>
+                            </ul>
+                            <p class="mt-4 text-secondary">At ARKA KIDS, we prepare a child to be independent in
                                 movements, actions, thoughts, and more. They learn to speak fluently, while music and
                                 rhythm sharpen their listening skills. Creativity is unleashed through structured art
                                 and craft activities, and social skills are developed through group games and
-                                interactions. Preschool near me provides a balanced approach to
-                                development.</p>
-                            <p class="m-0">At ARKA KIDS, we are thrilled to witness young minds discovering the fun of
+                                interactions.</p>
+                            <p class="m-0 text-secondary">We are thrilled to witness young minds discovering the fun of
                                 learning, reading, writing, drawing, and much more. Our goal is to make
                                 every child feel confident, independent, and excited to explore!
                             </p>
@@ -523,11 +538,12 @@
                             academically that will help your child succeed in elementary school. Our programs at
                             Arka Kids nurture warm relationships among children, teachers, and parents,
                             and our teachers build a close personal connection with each child in their care.</p>
-                            <ul>
-                                <li>At Arka Kids, children learn to focus attention on the teacher,
-                                    listen while others are speaking, and wait their turn to talk.</li>
-                                <li>Children are taken on field trips to make them understand the concepts/themes taught
-                                    at Arka Kids preschool.</li>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-ear-listen"></i> At Arka Kids, children learn to focus
+                                    attention on the teacher, listen while others are speaking, and wait their turn to
+                                    talk.</li>
+                                <li><i class="fa-solid fa-bus"></i> Children are taken on field trips to make them
+                                    understand the concepts/themes taught at Arka Kids preschool.</li>
                             </ul>
                             <p>Preschool near me provides a rich learning environment that fosters not
                                 only academic but also social growth. Best preschools near me offer the
@@ -571,15 +587,26 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Start Abacus Learning in India Today</h2>
-                    <p>Enroll your child or become a partner with Indias leading abacus training
-                        provider.</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+        <!-- cta -->
+        <section id="cta" class="container py-5">
+            <div class="cta-glass-box text-center p-5 rounded-4 position-relative overflow-hidden">
+                <div class="position-relative z-2">
+                    <h2 class="display-4 fw-bold text-white mb-4">Give Your Child the Best Start at Arka Kids</h2>
+                    <p class="lead text-white-50 mb-5 mx-auto" style="max-width: 700px;">
+                        Enroll your child in our nurturing preschool program or partner with us to start your own Arka
+                        Kids franchise.
+                        Shape the future of young minds today!
+                    </p>
+                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn-2">
+                        <span>Get In Touch <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                    </button>
+                </div>
+                <!-- Decorative Elements -->
+                <div class="position-absolute top-0 start-0 w-100 h-100 z-1">
+                    <div class="position-absolute top-0 end-0 bg-primary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(30%, -30%);"></div>
+                    <div class="position-absolute bottom-0 start-0 bg-secondary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(-30%, 30%);"></div>
                 </div>
             </div>
         </section>
