--- a/our-courses/handwriting.html
+++ b/our-courses/handwriting.html
@@ -240,15 +240,18 @@
                                             Kids</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/phonics-star.html">Phonics
                                             Star</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/brite-english.html">Brite
                                             English</a></li>
                                     <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My
+                                            Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -349,34 +352,42 @@
     </header>
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
-        <section id="banner" class="container-fluid pt-0 pt-md-0">
-            <div class="row">
-                <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="https://www.playabacusindia.com/images/banner/5.webp" class="d-block w-100"
-                                    alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Handwriting Practice - Cursive Writing</h1>
-                                        <p>Enhance your cursive writing with practice sheets and improve penmanship step
-                                            by step.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a
-                                                        href="https://www.playabacusindia.com/">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">Handwriting</li>
-                                            </ol>
-                                        </nav>
-
-                                    </div>
-                                </div>
-                            </div>
+        <!-- banner -->
+        <section class="position-relative py-5 overflow-hidden hero-section">
+            <div class="container position-relative z-1">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6">
+                        <nav aria-label="breadcrumb" class="mb-4">
+                            <ol class="breadcrumb bg-transparent p-0 mb-0">
+                                <li class="breadcrumb-item"><a href="../index.html"
+                                        class="text-decoration-none text-muted">Home</a></li>
+                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">Handwriting
+                                </li>
+                            </ol>
+                        </nav>
+                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
+                            Improve Your <span class="text-gradient">Handwriting</span>
+                        </h1>
+                        <p class="lead text-secondary mb-5 hero-text">
+                            Enhance your cursive writing with our structured practice sheets. Improve penmanship
+                            step-by-step
+                            and gain confidence in your writing skills.
+                        </p>
+                        <div class="d-flex gap-3">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                class="theme-btn-2 text-decoration-none">
+                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                            </a>
                         </div>
                     </div>
+                    <div class="col-lg-6 position-relative d-none d-lg-block">
+                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
+                            <img src="https://www.playabacusindia.com/images/banner/5.webp"
+                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="Handwriting Practice">
+                            <!-- Floating Elements -->
 
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -451,45 +462,58 @@
                 </div>
                 <div class="row g-5">
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">Advantages of IPA Handwriting Practice Program</h4>
-                            <p class="m-0">The IPA handwriting practice program helps improve legibility, avoid
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Advantages of IPA Handwriting Practice Program</h4>
+                            <p class="m-0 text-secondary">The IPA handwriting practice program helps improve legibility,
+                                avoid
                                 mistakes, and ensures neat presentation, making it ideal for both right- and left-handed
                                 children.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">COURSE DETAILS</h4>
-                            <li>
-                                The programme is for the age group of 5 years and above.</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">COURSE DETAILS</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-users"></i> The programme is for the age group of 5 years and
+                                    above.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Level Details:</h4>
-                            <li>Sub Junior 5 years to 6 years.</li>
-                            <li>Junior 7 years to 9 years.</li>
-                            <li>Senior 9 years and Above.</li>
-                            <li>Calligraphy 9 years and Above.</li>
-
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Level Details:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-layer-group"></i> Sub Junior: 5 years to 6 years.</li>
+                                <li><i class="fa-solid fa-layer-group"></i> Junior: 7 years to 9 years.</li>
+                                <li><i class="fa-solid fa-layer-group"></i> Senior: 9 years and Above.</li>
+                                <li><i class="fa-solid fa-pen-nib"></i> Calligraphy: 9 years and Above.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Session details:</h4>
-                            <li>Duration for 4 levels - 3 Months each level.</li>
-                            <li>Weekly one class of 2 hours each.</li>
-                            <li>International Certificate are awarded on the successful completion of each level.</li>
-
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Session details:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-clock"></i> Duration for 4 levels - 3 Months each level.</li>
+                                <li><i class="fa-solid fa-calendar-week"></i> Weekly one class of 2 hours each.</li>
+                                <li><i class="fa-solid fa-certificate"></i> International Certificate are awarded on the
+                                    successful completion of each level.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Student kit:</h4>
-                            <li>BAG</li>
-                            <li>T-SHIRT</li>
-                            <li>BOOKS</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Student kit:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-briefcase"></i> BAG</li>
+                                <li><i class="fa-solid fa-shirt"></i> T-SHIRT</li>
+                                <li><i class="fa-solid fa-book"></i> BOOKS</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12">
