--- a/our-courses/my-math.html
+++ b/our-courses/my-math.html
@@ -240,15 +240,18 @@
                                             Kids</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/phonics-star.html">Phonics
                                             Star</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/brite-english.html">Brite
                                             English</a></li>
                                     <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My
+                                            Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -349,36 +352,41 @@
     </header>
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
-        <section id="banner" class="container-fluid pt-0 pt-md-0">
-            <div class="row">
-                <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="https://www.playabacusindia.com/images/banner/2.webp" class="d-block w-100"
-                                    alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Master Vedic Mathematics & Abacus Math</h1>
-                                        <p>Discover the power of Vedic maths and Abacus
-                                            math to boost your childs arithmetic skills through online and
-                                            in-person classes.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a
-                                                        href="https://www.playabacusindia.com/">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">My Math
-                                                </li>
-                                            </ol>
-                                        </nav>
-
-                                    </div>
-                                </div>
-                            </div>
+        <!-- banner -->
+        <section class="position-relative py-5 overflow-hidden hero-section">
+            <div class="container position-relative z-1">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6">
+                        <nav aria-label="breadcrumb" class="mb-4">
+                            <ol class="breadcrumb bg-transparent p-0 mb-0">
+                                <li class="breadcrumb-item"><a href="../index.html"
+                                        class="text-decoration-none text-muted">Home</a></li>
+                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">My Math
+                                </li>
+                            </ol>
+                        </nav>
+                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
+                            Master <span class="text-gradient">Vedic Mathematics</span>
+                        </h1>
+                        <p class="lead text-secondary mb-5 hero-text">
+                            Discover the power of Vedic maths and Abacus math to boost your child's
+                            arithmetic skills through online and in-person classes.
+                        </p>
+                        <div class="d-flex gap-3">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                class="theme-btn-2 text-decoration-none">
+                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                            </a>
                         </div>
                     </div>
+                    <div class="col-lg-6 position-relative d-none d-lg-block">
+                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
+                            <img src="https://www.playabacusindia.com/images/banner/2.webp"
+                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="My Math Course">
+                            <!-- Floating Elements -->
 
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -458,60 +466,79 @@
                 </div>
                 <div class="row g-5">
                     <div class="col-12">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Benefits of Abacus Math Olympiad Class:</h4>
-                            <ul>
-                                <li>Improve math skills</li>
-                                <li>Develop effective strategies to answer questions</li>
-                                <li>Become more confident test takers</li>
-                                <li>Students are trained for high standard Olympiad</li>
-                                <li>Weekly 2 classes for 2 hours each</li>
-                                <p class="mb-0 mt-4">Refer your friends to join this Abacus Math Olympiad program and
-                                    avail special fee concession.</p>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Benefits of Abacus Math Olympiad Class:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-calculator"></i> Improve math skills</li>
+                                <li><i class="fa-solid fa-lightbulb"></i> Develop effective strategies to answer
+                                    questions</li>
+                                <li><i class="fa-solid fa-check-circle"></i> Become more confident test takers</li>
+                                <li><i class="fa-solid fa-medal"></i> Students are trained for high standard Olympiad
+                                </li>
+                                <li><i class="fa-solid fa-clock"></i> Weekly 2 classes for 2 hours each</li>
+                            </ul>
+                            <p class="mb-0 mt-4 text-muted fst-italic">Refer your friends to join this Abacus Math
+                                Olympiad program and
+                                avail special fee concession.</p>
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">COURSE DETAILS</h4>
-                            <li>My Math programme helps the skills in learners such as observing, identifying,
-                                comparing, classifying, inferring, predicting, quantitative reasoning, problem-solving,
-                                analytical-thinking, listening, speaking, reading, writing and more.</li>
-                            <li>It helps to identify a childs capability and real potential that may help them survive
-                                better in todays modern competitive world.</li>
-                            <li>It motivates students to endeavor for a better and deeper understanding of facts so as
-                                to enhance their reasoning, analytical and problem-solving skills.</li>
-                            <li>Beyond encouraging an interest in mathematics, it helps prepare students for
-                                competition.</li>
-                            <li>Such contests run the risk of encouraging students to overvalue skills that arent
-                                nearly as valuable as the one asset a contest should help them develop the ability to
-                                think about and solve complex problems.</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">COURSE DETAILS</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-brain"></i> My Math programme helps the skills in learners
+                                    such as observing, identifying, comparing, classifying, inferring, predicting,
+                                    quantitative reasoning, problem-solving, analytical-thinking, listening, speaking,
+                                    reading, writing and more.</li>
+                                <li><i class="fa-solid fa-search"></i> It helps to identify a childs capability and real
+                                    potential that may help them survive better in todays modern competitive world.</li>
+                                <li><i class="fa-solid fa-chart-line"></i> It motivates students to endeavor for a
+                                    better and deeper understanding of facts so as to enhance their reasoning,
+                                    analytical and problem-solving skills.</li>
+                                <li><i class="fa-solid fa-trophy"></i> Beyond encouraging an interest in mathematics, it
+                                    helps prepare students for competition.</li>
+                                <li><i class="fa-solid fa-puzzle-piece"></i> Such contests develop the ability to think
+                                    about and solve complex problems.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-2">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Level Details</h4>
-                            <li>Level 1</li>
-                            <li>Level 2</li>
-                            <li>Level 3</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Level Details</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-layer-group"></i> Level 1</li>
+                                <li><i class="fa-solid fa-layer-group"></i> Level 2</li>
+                                <li><i class="fa-solid fa-layer-group"></i> Level 3</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Session details:</h4>
-                            <li>Duration per level 12 16 weeks.</li>
-                            <li>One session per week of 2 hours.</li>
-                            <li>Two sessions per week of 1 hour each.</li>
-                            <li>Students per class 12 to 15.</li>
-                            <li>Certificates are awarded on the successful completion of each level.</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Session details:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-clock"></i> Duration per level: 12-16 weeks.</li>
+                                <li><i class="fa-solid fa-calendar-week"></i> One session per week of 2 hours.</li>
+                                <li><i class="fa-solid fa-calendar-day"></i> Two sessions per week of 1 hour each.</li>
+                                <li><i class="fa-solid fa-users"></i> Students per class: 12 to 15.</li>
+                                <li><i class="fa-solid fa-certificate"></i> Certificates are awarded on the successful
+                                    completion of each level.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Student kit:</h4>
-                            <li>BRAIN TREE TOOL</li>
-                            <li>BAG</li>
-                            <li>T-SHIRT</li>
-                            <li>BOOKS</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Student kit:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-toolbox"></i> BRAIN TREE TOOL</li>
+                                <li><i class="fa-solid fa-briefcase"></i> BAG</li>
+                                <li><i class="fa-solid fa-shirt"></i> T-SHIRT</li>
+                                <li><i class="fa-solid fa-book"></i> BOOKS</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -557,15 +584,26 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Start Abacus Learning in India Today</h2>
-                    <p>Enroll your child or become a partner with Indias leading abacus training
-                        provider.</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+        <!-- cta -->
+        <section id="cta" class="container py-5">
+            <div class="cta-glass-box text-center p-5 rounded-4 position-relative overflow-hidden">
+                <div class="position-relative z-2">
+                    <h2 class="display-4 fw-bold text-white mb-4">Start Your <span class="text-warning">Math
+                            Journey</span> Today</h2>
+                    <p class="lead text-white-50 mb-5 mx-auto" style="max-width: 700px;">
+                        Enroll your child in our My Math program to build a strong foundation in mathematics,
+                        from basic numbers to advanced concepts.
+                    </p>
+                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn-2">
+                        <span>Get In Touch <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                    </button>
+                </div>
+                <!-- Decorative Elements -->
+                <div class="position-absolute top-0 start-0 w-100 h-100 z-1">
+                    <div class="position-absolute top-0 end-0 bg-primary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(30%, -30%);"></div>
+                    <div class="position-absolute bottom-0 start-0 bg-secondary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(-30%, 30%);"></div>
                 </div>
             </div>
         </section>
