--- a/our-courses/phonics-star.html
+++ b/our-courses/phonics-star.html
@@ -241,15 +241,18 @@
                                             Kids</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/phonics-star.html">Phonics
                                             Star</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/brite-english.html">Brite
                                             English</a></li>
                                     <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My
+                                            Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -350,34 +353,42 @@
     </header>
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
-        <section id="banner" class="container-fluid pt-0 pt-md-0">
-            <div class="row">
-                <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="https://www.playabacusindia.com/images/banner/5.webp" class="d-block w-100"
-                                    alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Master UK English Today</h1>
-                                        <p>Join our English course in the UK to learn UK
-                                            English, improve your British accent, and
-                                            explore the national language of the UK.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">UK English</li>
-                                            </ol>
-                                        </nav>
-
-                                    </div>
-                                </div>
-                            </div>
+        <!-- banner -->
+        <section class="position-relative py-5 overflow-hidden hero-section">
+            <div class="container position-relative z-1">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6">
+                        <nav aria-label="breadcrumb" class="mb-4">
+                            <ol class="breadcrumb bg-transparent p-0 mb-0">
+                                <li class="breadcrumb-item"><a href="../index.html"
+                                        class="text-decoration-none text-muted">Home</a></li>
+                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">UK English
+                                </li>
+                            </ol>
+                        </nav>
+                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
+                            Master <span class="text-gradient">UK English</span> Today
+                        </h1>
+                        <p class="lead text-secondary mb-5 hero-text">
+                            Join our English course to learn UK English, improve your British accent, and explore the
+                            nuances of the language.
+                            Designed for young learners to speak, read, and write confidently.
+                        </p>
+                        <div class="d-flex gap-3">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                class="theme-btn-2 text-decoration-none">
+                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                            </a>
                         </div>
                     </div>
+                    <div class="col-lg-6 position-relative d-none d-lg-block">
+                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
+                            <img src="https://www.playabacusindia.com/images/banner/5.webp"
+                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="UK English Course">
+                            <!-- Floating Elements -->
 
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -455,65 +466,80 @@
                 </div>
                 <div class="row g-5 mt-3">
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">What does phonics mean?</h4>
-                            <p>Phonics is a method of teaching reading that emphasizes the relationship between letters
-                                andsounds,essentially helping children learn how to decode words by connecting letters
-                                to sounds</p>
-                            <ul>
-                                <li>There are 26 letters</li>
-                                <li>There are 44 sounds</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">What does phonics mean?</h4>
+                            <p class="text-secondary">Phonics is a method of teaching reading that emphasizes the
+                                relationship between letters
+                                and sounds, essentially helping children learn how to decode words by connecting letters
+                                to sounds.</p>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-font"></i> There are 26 letters</li>
+                                <li><i class="fa-solid fa-volume-high"></i> There are 44 sounds</li>
                             </ul>
-                            <p>We blend sounds together to help us read (build words
-                                up)</p>
-                            <p class="m-0">We segment words into sounds to help us
-                                spell (break words down)</p>
+                            <p class="text-secondary">We blend sounds together to help us read (build words up).</p>
+                            <p class="m-0 text-secondary">We segment words into sounds to help us spell (break words
+                                down).</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">Multi-sensory teaching</h4>
-                            <p>Each sound is taught in a multisensory ( story , song and action) way to enable to
-                                children to recognise</p>
-                            <ul>
-                                <li> Sound</li>
-                                <li> Letter name</li>
-                                <li> Shape</li>
-                                <li> Formation</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Multi-sensory teaching</h4>
+                            <p class="text-secondary">Each sound is taught in a multisensory (story, song, and action)
+                                way to enable
+                                children to recognize:</p>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-music"></i> Sound</li>
+                                <li><i class="fa-solid fa-font"></i> Letter name</li>
+                                <li><i class="fa-solid fa-shapes"></i> Shape</li>
+                                <li><i class="fa-solid fa-pen-nib"></i> Formation</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr  mb-4">Level Details:</h4>
-                            <strong>BASIC LEVEL 3 Levels</strong>
-                            <li>Starter 3 years +</li>
-                            <li>Level 1 4 years +</li>
-                            <li>Level 2 5 years +</li>
-                            <br>
-                            <strong>ADVANCE LEVEL 3 Levels</strong>
-                            <li>Level 3</li>
-                            <li>Level 4</li>
-                            <li>Level 5</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Level Details:</h4>
+                            <strong class="d-block mb-2 text-primary">BASIC LEVEL (3 Levels)</strong>
+                            <ul class="icon-list mb-3">
+                                <li><i class="fa-solid fa-star"></i> Starter: 3 years +</li>
+                                <li><i class="fa-solid fa-star"></i> Level 1: 4 years +</li>
+                                <li><i class="fa-solid fa-star"></i> Level 2: 5 years +</li>
+                            </ul>
+                            <strong class="d-block mb-2 text-primary">ADVANCE LEVEL (3 Levels)</strong>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-medal"></i> Level 3</li>
+                                <li><i class="fa-solid fa-medal"></i> Level 4</li>
+                                <li><i class="fa-solid fa-medal"></i> Level 5</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr  mb-4">Session details:</h4>
-                            <li>Duration per level 16 20 weeks.</li>
-                            <li>One session per week of 2 hours.</li>
-                            <li>Two sessions per week of 1 hour each.</li>
-                            <li>Students per class 10 to 12.</li>
-                            <li>Students will be trained through multimedia in class.</li>
-                            <li>Certificates are awarded on the successful completion of each level.</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Session details:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-clock"></i> Duration per level: 16-20 weeks.</li>
+                                <li><i class="fa-solid fa-calendar-week"></i> One session per week of 2 hours.</li>
+                                <li><i class="fa-solid fa-calendar-day"></i> Two sessions per week of 1 hour each.</li>
+                                <li><i class="fa-solid fa-users"></i> Students per class: 10 to 12.</li>
+                                <li><i class="fa-solid fa-laptop-code"></i> Students will be trained through multimedia
+                                    in class.</li>
+                                <li><i class="fa-solid fa-certificate"></i> Certificates are awarded on the successful
+                                    completion of each level.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mt-5">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr  mb-4">Student kit:</h4>
-                            <li>BAG</li>
-                            <li>T-SHIRT</li>
-                            <li>BOOKS</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Student kit:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-briefcase"></i> BAG</li>
+                                <li><i class="fa-solid fa-shirt"></i> T-SHIRT</li>
+                                <li><i class="fa-solid fa-book"></i> BOOKS</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -575,15 +601,25 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Start Abacus Learning in India Today</h2>
-                    <p>Enroll your child or become a partner with Indias leading abacus training
-                        provider.</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+        <!-- cta -->
+        <section id="cta" class="container py-5">
+            <div class="cta-glass-box text-center p-5 rounded-4 position-relative overflow-hidden">
+                <div class="position-relative z-2">
+                    <h2 class="display-4 fw-bold text-white mb-4">Start Your Phonics Journey Today</h2>
+                    <p class="lead text-white-50 mb-5 mx-auto" style="max-width: 700px;">
+                        Enroll your child in our Phonics Star program or partner with us to bring world-class English
+                        education to your community.
+                    </p>
+                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn-2">
+                        <span>Get In Touch <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                    </button>
+                </div>
+                <!-- Decorative Elements -->
+                <div class="position-absolute top-0 start-0 w-100 h-100 z-1">
+                    <div class="position-absolute top-0 end-0 bg-primary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(30%, -30%);"></div>
+                    <div class="position-absolute bottom-0 start-0 bg-secondary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(-30%, 30%);"></div>
                 </div>
             </div>
         </section>
