--- a/our-courses/abacus.html
+++ b/our-courses/abacus.html
@@ -240,15 +240,18 @@
                                             Kids</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/phonics-star.html">Phonics
                                             Star</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/brite-english.html">Brite
                                             English</a></li>
                                     <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My
+                                            Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -349,36 +352,41 @@
     </header>
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
-        <section id="banner" class="container-fluid pt-0 pt-md-0">
-            <div class="row">
-                <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="https://www.playabacusindia.com/images/banner/6.webp" class="d-block w-100"
-                                    alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Unlock Your Childs Potential with Abacus Learning
-                                        </h1>
-                                        <p>Discover the benefits of abacus training with Ideal Play Abacus. Find abacus
-                                            near me and help your child develop essential cognitive skills through
-                                            interactive abacus classes.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a
-                                                        href="https://www.playabacusindia.com/">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">Abacus</li>
-                                            </ol>
-                                        </nav>
-
-                                    </div>
-                                </div>
-                            </div>
+        <!-- banner -->
+        <section class="position-relative py-5 overflow-hidden hero-section">
+            <div class="container position-relative z-1">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6">
+                        <nav aria-label="breadcrumb" class="mb-4">
+                            <ol class="breadcrumb bg-transparent p-0 mb-0">
+                                <li class="breadcrumb-item"><a href="../index.html"
+                                        class="text-decoration-none text-muted">Home</a></li>
+                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">Abacus</li>
+                            </ol>
+                        </nav>
+                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
+                            Unlock Your Child's Potential with <span class="text-gradient">Abacus Learning</span>
+                        </h1>
+                        <p class="lead text-secondary mb-5 hero-text">
+                            Discover the benefits of abacus training with Ideal Play Abacus. Find abacus
+                            near me and help your child develop essential cognitive skills through
+                            interactive abacus classes.
+                        </p>
+                        <div class="d-flex gap-3">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                class="theme-btn-2 text-decoration-none">
+                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                            </a>
                         </div>
                     </div>
+                    <div class="col-lg-6 position-relative d-none d-lg-block">
+                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
+                            <img src="https://www.playabacusindia.com/images/banner/6.webp"
+                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="Abacus Learning">
+                            <!-- Floating Elements -->
 
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -486,15 +494,17 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">Benefits Of Abacus:</h4>
-                            <li>Speed</li>
-                            <li>Accuracy</li>
-                            <li>Concentration</li>
-                            <li>Over all Academic Performance</li>
-                            <li>Listening Skills and Quick Recall</li>
-                            <li>Photographic Memory</li>
-
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Benefits Of Abacus:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-gauge-high"></i> Speed</li>
+                                <li><i class="fa-solid fa-bullseye"></i> Accuracy</li>
+                                <li><i class="fa-solid fa-brain"></i> Concentration</li>
+                                <li><i class="fa-solid fa-chart-line"></i> Overall Academic Performance</li>
+                                <li><i class="fa-solid fa-ear-listen"></i> Listening Skills and Quick Recall</li>
+                                <li><i class="fa-solid fa-camera"></i> Photographic Memory</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
@@ -506,34 +516,44 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">LEVEL DETAILS</h4>
-                            <li>Elementary level 6 Basic Levels (4 years to 6 years)</li>
-                            <li>Regular Level 13 Levels (7 years to 12 years)</li>
-                            <li>6 Basic Level</li>
-                            <li>4 Advance Level</li>
-                            <li>3 Grand Master Level</li>
-
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">LEVEL DETAILS</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-layer-group"></i> Elementary level 6 Basic Levels (4 years to
+                                    6 years)</li>
+                                <li><i class="fa-solid fa-layer-group"></i> Regular Level 13 Levels (7 years to 12
+                                    years)</li>
+                                <li><i class="fa-solid fa-check"></i> 6 Basic Level</li>
+                                <li><i class="fa-solid fa-check"></i> 4 Advance Level</li>
+                                <li><i class="fa-solid fa-star"></i> 3 Grand Master Level</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">SESSION DETAILS</h4>
-                            <li>Duration per level 12 16 weeks</li>
-                            <li>One session per week of 2 hours</li>
-                            <li>Two sessions per week of 1 hour each</li>
-                            <li>Students per class 12 to 15</li>
-                            <li>Certificates are awarded on the successful completion of each level</li>
-
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">SESSION DETAILS</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-clock"></i> Duration per level 12-16 weeks</li>
+                                <li><i class="fa-solid fa-calendar-week"></i> One session per week of 2 hours</li>
+                                <li><i class="fa-solid fa-calendar-day"></i> Two sessions per week of 1 hour each</li>
+                                <li><i class="fa-solid fa-users"></i> Students per class 12 to 15</li>
+                                <li><i class="fa-solid fa-certificate"></i> Certificates are awarded on the successful
+                                    completion of each level</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr">STUDENT KIT</h4>
-                            <li>Abacus tool</li>
-                            <li>Bag</li>
-                            <li>T-Shirt</li>
-                            <li>Books</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">STUDENT KIT</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-calculator"></i> Abacus tool</li>
+                                <li><i class="fa-solid fa-briefcase"></i> Bag</li>
+                                <li><i class="fa-solid fa-shirt"></i> T-Shirt</li>
+                                <li><i class="fa-solid fa-book"></i> Books</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -853,15 +873,25 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Start Abacus Learning in India Today</h2>
-                    <p>Enroll your child in abacus classes or become a partner with Ideal Play Abacus. Find abacus near
-                        me or start an abacus franchise today!</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+        <!-- cta -->
+        <section id="cta" class="container py-5">
+            <div class="cta-glass-box text-center p-5 rounded-4 position-relative overflow-hidden">
+                <div class="position-relative z-2">
+                    <h2 class="display-4 fw-bold text-white mb-4">Start Abacus Learning in India Today</h2>
+                    <p class="lead text-white-50 mb-5 mx-auto" style="max-width: 700px;">
+                        Enroll your child in abacus classes or become a partner with Ideal Play Abacus. Find abacus
+                        near me or start an abacus franchise today!
+                    </p>
+                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn-2">
+                        <span>Get In Touch <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                    </button>
+                </div>
+                <!-- Decorative Elements -->
+                <div class="position-absolute top-0 start-0 w-100 h-100 z-1">
+                    <div class="position-absolute top-0 end-0 bg-primary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(30%, -30%);"></div>
+                    <div class="position-absolute bottom-0 start-0 bg-secondary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(-30%, 30%);"></div>
                 </div>
             </div>
         </section>
