--- a/our-courses/brite-english.html
+++ b/our-courses/brite-english.html
@@ -240,15 +240,18 @@
                                             Kids</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/phonics-star.html">Phonics
                                             Star</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/brite-english.html">Brite
                                             English</a></li>
                                     <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My
+                                            Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -349,38 +352,41 @@
     </header>
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
-        <section id="banner" class="container-fluid pt-0 pt-md-0">
-            <div class="row">
-                <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="https://www.playabacusindia.com/images/banner/5.webp" class="d-block w-100"
-                                    alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Brite English - Enhance Your Writing Skills</h1>
-                                        <p>Brite English helps kids improve their writing skills, from
-                                            summary writing to comprehension writing,
-                                            boosting their verbal communication and
-                                            handwriting skills.
-                                        </p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a
-                                                        href="https://www.playabacusindia.com/">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">Brite English
-                                                </li>
-                                            </ol>
-                                        </nav>
-
-                                    </div>
-                                </div>
-                            </div>
+        <!-- banner -->
+        <section class="position-relative py-5 overflow-hidden hero-section">
+            <div class="container position-relative z-1">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6">
+                        <nav aria-label="breadcrumb" class="mb-4">
+                            <ol class="breadcrumb bg-transparent p-0 mb-0">
+                                <li class="breadcrumb-item"><a href="../index.html"
+                                        class="text-decoration-none text-muted">Home</a></li>
+                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">Brite
+                                    English</li>
+                            </ol>
+                        </nav>
+                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
+                            Speak <span class="text-gradient">English</span> Confidently
+                        </h1>
+                        <p class="lead text-secondary mb-5 hero-text">
+                            A comprehensive communicative English program for school children.
+                            Enhance reading, writing, listening, and speaking skills with our structured curriculum.
+                        </p>
+                        <div class="d-flex gap-3">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                class="theme-btn-2 text-decoration-none">
+                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                            </a>
                         </div>
                     </div>
+                    <div class="col-lg-6 position-relative d-none d-lg-block">
+                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
+                            <img src="https://www.playabacusindia.com/images/banner/5.webp"
+                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="Brite English Course">
+                            <!-- Floating Elements -->
 
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -459,20 +465,27 @@
                 </div>
                 <div class="row g-5">
                     <div class="col-12">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">WHY BRITE ENGLISH?</h4>
-                            <p>Brite English helps children build strong English skills early, boosting their
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">WHY BRITE ENGLISH?</h4>
+                            <p class="text-secondary">Brite English helps children build strong English skills early,
+                                boosting their
                                 confidence, creativity, and communication.</p>
-                            <ul>
-                                <li>Develops strong English writing and speaking skills at an early
-                                    age.</li>
-                                <li>Improves vocabulary, grammar, and pronunciation naturally through
-                                    interactive learning.</li>
-                                <li>Encourages creative thinking, focus, and faster reaction times.</li>
-                                <li>Bilingual children gain better academic and cognitive skills.</li>
-                                <li>Helps children feel comfortable in multicultural environments.</li>
-                                <li>Enhances parent-child bonding through shared learning experiences.</li>
-                                <li>Flexible curriculum designed around each childs interests.</li>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-check"></i> Develops strong English writing and speaking
+                                    skills at an early age.</li>
+                                <li><i class="fa-solid fa-check"></i> Improves vocabulary, grammar, and pronunciation
+                                    naturally through interactive learning.</li>
+                                <li><i class="fa-solid fa-check"></i> Encourages creative thinking, focus, and faster
+                                    reaction times.</li>
+                                <li><i class="fa-solid fa-check"></i> Bilingual children gain better academic and
+                                    cognitive skills.</li>
+                                <li><i class="fa-solid fa-check"></i> Helps children feel comfortable in multicultural
+                                    environments.</li>
+                                <li><i class="fa-solid fa-check"></i> Enhances parent-child bonding through shared
+                                    learning experiences.</li>
+                                <li><i class="fa-solid fa-check"></i> Flexible curriculum designed around each childs
+                                    interests.</li>
                             </ul>
                         </div>
                     </div>
@@ -497,42 +510,61 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">BENEFITS OF BRITE:</h4>
-                            <li>Simple & Easy Writing.</li>
-                            <li>Verbal Skills.</li>
-                            <li>Writing Skills.</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">BENEFITS OF BRITE:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-pencil"></i> Simple & Easy Writing.</li>
+                                <li><i class="fa-solid fa-comments"></i> Verbal Skills.</li>
+                                <li><i class="fa-solid fa-pen-fancy"></i> Writing Skills.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">COURSE DETAILS</h4>
-                            <li>The programme is for the age group of 7 to 12 years.</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">COURSE DETAILS</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-users"></i> The programme is for the age group of 7 to 12
+                                    years.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-5">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">Level Details</h4>
-                            <li>BASIC LEVEL 2 Levels ( 7 years to 12 years).</li>
-                            <li>ADVANCE LEVEL 3 Levels ( 12 years and above).</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Level Details</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-layer-group"></i> BASIC LEVEL: 2 Levels (7 years to 12 years).
+                                </li>
+                                <li><i class="fa-solid fa-layer-group"></i> ADVANCE LEVEL: 3 Levels (12 years and
+                                    above).</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">Session details:</h4>
-                            <li>Duration per level 12 16 weeks</li>
-                            <li>One session per week of 2 hours</li>
-                            <li>Two sessions per week of 1 hour each</li>
-                            <li>Students per class 12 to 15</li>
-                            <li>Certificates are awarded on the successful completion of each level</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Session details:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-clock"></i> Duration per level: 12-16 weeks.</li>
+                                <li><i class="fa-solid fa-calendar-week"></i> One session per week of 2 hours.</li>
+                                <li><i class="fa-solid fa-calendar-day"></i> Two sessions per week of 1 hour each.</li>
+                                <li><i class="fa-solid fa-users"></i> Students per class: 12 to 15.</li>
+                                <li><i class="fa-solid fa-certificate"></i> Certificates are awarded on the successful
+                                    completion of each level.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="d-flex justify-content-center align-items-start flex-column w-100">
-                            <h4 class="txt-primary-clr mb-4">Student kit:</h4>
-                            <li>BAG</li>
-                            <li>T-SHIRT</li>
-                            <li>BOOKS</li>
+                        <div
+                            class="d-flex justify-content-center align-items-start flex-column w-100 h-100 p-4 bg-white rounded-4 shadow-sm">
+                            <h4 class="text-dark mb-4 fw-bold">Student kit:</h4>
+                            <ul class="icon-list">
+                                <li><i class="fa-solid fa-briefcase"></i> BAG</li>
+                                <li><i class="fa-solid fa-shirt"></i> T-SHIRT</li>
+                                <li><i class="fa-solid fa-book"></i> BOOKS</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -578,15 +610,25 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Start Abacus Learning in India Today</h2>
-                    <p>Enroll your child or become a partner with Indias leading abacus training
-                        provider.</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+        <!-- cta -->
+        <section id="cta" class="container py-5">
+            <div class="cta-glass-box text-center p-5 rounded-4 position-relative overflow-hidden">
+                <div class="position-relative z-2">
+                    <h2 class="display-4 fw-bold text-white mb-4">Master English Today</h2>
+                    <p class="lead text-white-50 mb-5 mx-auto" style="max-width: 700px;">
+                        Enroll your child in Brite English to build a strong foundation in communication, or partner
+                        with us to bring this program to your school.
+                    </p>
+                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn-2">
+                        <span>Get In Touch <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                    </button>
+                </div>
+                <!-- Decorative Elements -->
+                <div class="position-absolute top-0 start-0 w-100 h-100 z-1">
+                    <div class="position-absolute top-0 end-0 bg-primary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(30%, -30%);"></div>
+                    <div class="position-absolute bottom-0 start-0 bg-secondary opacity-25 rounded-circle"
+                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(-30%, 30%);"></div>
                 </div>
             </div>
         </section>
